--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
     </section>
     <!-- category end -->
 
+    <!-- socials start -->
+    <section class="socials">
+        <ul class="socials__items">
+            <li class="socials__item">
+                <a href="#!" class="socials__link">
+                    <img src="./images/instagram.png" alt="Instagram">
+                </a>
+            </li>
+            <li class="socials__item">
+                <a href="#!" class="socials__link">
+                    <img src="./images/telegram.png" alt="Instagram">
+                </a>
+            </li>
+            <li class="socials__item">
+                <a href="#!" class="socials__link">
+                    <img src="./images/linkedin.png" alt="Instagram">
+                </a>
+            </li>
+            <li class="socials__item">
+                <a href="#!" class="socials__link">
+                    <img src="./images/twitter.png" alt="Instagram">
+                </a>
+            </li>
+        </ul>
+    </section>
+    <!-- socials end -->
+
     <!-- posts start -->
     <section class="posts">
         <div class="wrapper">
