--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -51,52 +51,212 @@
 
     <!-- contacts start -->
     <section class="contacts">
-        <div class="wrapper">
+        <div class="wrapper__contacts">
             <div class="card contacts__content">
                 <div class="contact__content--header">
-                    <h1 class="contacts__title">Lorem, ipsum dolor.</h1>
-                </div>
-                <p class="contacts__desc">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
-                    possimus sunt dignissimos voluptatem laborum eaque enim, modi dolorem, ipsam error soluta placeat
-                    tenetur eos voluptate nesciunt?
-                </p>
-                <p class="contacts__desc">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
-                    possimus sunt dignissimos voluptatem laborum eaque enim, modi dolorem, ipsam error soluta placeat
-                    tenetur eos voluptate nesciunt?
-                </p>
-                <p class="contacts__desc">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
-                    possimus sunt dignissimos voluptatem laborum eaque enim, modi dolorem, ipsam error soluta placeat
-                    tenetur eos voluptate nesciunt?
-                </p>
-                <nav class="contacts__socials">
-                    <div class="contacts__socials--content">
-                        <a href="#!" class="contact__socials--link">
-                            <img src="../images/instagram.png" alt="Instagram">
-                        </a>
-                        <a href="#!" class="contact__socials--link">
-                            <img src="../images/telegram.png" alt="Telegram">
-                        </a>
-                        <a href="#!" class="contact__socials--link">
-                            <img src="../images/twitter.png" alt="Twitter">
-                        </a>
-                        <a href="#!" class="contact__socials--link">
-                            <img src="../images/linkedin.png" alt="LinkedIn">
-                        </a>
+                    <h1 class="contacts__title">Yaroslav Legkiy</h1>
+                    <div class="contacts__dev">
+                        <h2 class="contacts__subtitle">Junior Front-end developer</h2>
+                        <img src="../images/check-mark.png" alt="Check-mark">
                     </div>
-                </nav>
-                <p class="contacts__desc">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
-                    possimus sunt dignissimos voluptatem laborum eaque enim, modi dolorem, ipsam error soluta placeat
-                    tenetur eos voluptate nesciunt?
-                </p>
-                <p class="contacts__desc">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
-                    possimus sunt dignissimos voluptatem laborum eaque enim, modi dolorem, ipsam error soluta placeat
-                    tenetur eos voluptate nesciunt?
-                </p>
+                    <p class="contacts__header--desc">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quis nam sapiente iusto
+                        possimus sunt dignissimos voluptatem
+                    </p>
+                </div>
+                <div class="contacts__contant">
+                    <div class="contacts__left">
+                        <div class="contacts__card">
+                            <div class="contacts__card--header">
+                                <h2 class="contacts__card--num">01</h2>
+                                <h2 class="contacts__card--title">Personal Info</h2>
+                            </div>
+                            <div class="contacts__card--content">
+                                <ul class="contacts__card--list">
+                                    <li class="contacts__card--item">
+                                        <h2 class="contacts__list--title">Phone</h2>
+                                        <a href="tel:+380672549571" class="contacts__list--link">+380 67 254 9571</a>
+                                    </li>
+                                    <li class="contacts__card--item">
+                                        <h2 class="contacts__list--title">E-mail</h2>
+                                        <a href="mailto:yariklegkiy@gmail.com"
+                                            class="contacts__list--link">yariklegkiy@gmail.com</a>
+                                    </li>
+                                    <li class="contacts__card--item">
+                                        <h2 class="contacts__list--title">LinkedIn</h2>
+                                        <a href="https://www.linkedin.com/in/yaroslav-legkiy-ab3121201/"
+                                            class="contacts__list--link">https://www.linkedin.com/in/yaroslav-legkiy-ab3121201/</a>
+                                    </li>
+                                    <li class="contacts__card--item">
+                                        <h2 class="contacts__list--title">GirHub</h2>
+                                        <a href="https://github.com/YarikLegkiy"
+                                            class="contacts__list--link">https://github.com/YarikLegkiy</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="contacts__card">
+                            <div class="contacts__card--header">
+                                <h2 class="contacts__card--num">02</h2>
+                                <h2 class="contacts__card--title">Skills</h2>
+                            </div>
+                            <div class="contacts__card--content">
+                                <ul class="contacts__card--skills-list">
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">HTML5</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">CSS3</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">SASS, SCSS, LESS</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">JS ES6</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">PHP</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">Wordpress</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="contacts__card">
+                            <div class="contacts__card--header">
+                                <h2 class="contacts__card--num">03</h2>
+                                <h2 class="contacts__card--title">Languages</h2>
+                            </div>
+                            <div class="contacts__card--content">
+                                <ul class="contacts__card--skills-list">
+                                    <li class="contacts__card--skills-item">
+                                        <h2 class="contacts__card--skills-name">English</h2>
+                                        <div class="circles">
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                            <span class="circle-not-bgd"></span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contacts__right">
+                        <div class="contacts__card">
+                            <div class="contacts__card--header">
+                                <h2 class="contacts__card--num">04</h2>
+                                <h2 class="contacts__card--title">Education</h2>
+                            </div>
+                            <div class="contacts__card--content">
+                                <div class="contacts__eductn">
+                                    <div class="contacts__eductn--left">
+                                        <h2 class="contacts__eductn--date">2008-2019</h2>
+                                    </div>
+                                    <div class="contacts__eductn--right">
+                                        <p>
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo odit earum
+                                            animi!
+                                            Dolore animi dolorum, beatae nobis pariatur omnis quidem. Minima impedit
+                                            quisquam unde cum nemo ut porro ullam veniam blanditiis quia tenetur
+                                            sapiente
+                                            maxime in ad assumenda eligendi asperiores, obcaecati perferendis quo!
+                                            Consequuntur fuga natus porro!
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="contacts__eductn">
+                                    <div class="contacts__eductn--left">
+                                        <h2 class="contacts__eductn--date">2019-2023</h2>
+                                    </div>
+                                    <div class="contacts__eductn--right">
+                                        <p>
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo odit earum
+                                            animi!
+                                            Dolore animi dolorum, beatae nobis pariatur omnis quidem. Minima impedit
+                                            quisquam unde cum nemo ut porro ullam veniam blanditiis quia tenetur
+                                            sapiente
+                                            maxime in ad assumenda eligendi asperiores, obcaecati perferendis quo!
+                                            Consequuntur fuga natus porro!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts__card">
+                            <div class="contacts__card--header">
+                                <h2 class="contacts__card--num">05</h2>
+                                <h2 class="contacts__card--title">Certification</h2>
+                            </div>
+                            <div class="contacts__card--content">
+                                <div class="contacts__eductn">
+                                    <div class="contacts__eductn--left">
+                                        <h2 class="contacts__eductn--date">16.04.2020</h2>
+                                    </div>
+                                    <div class="contacts__eductn--right">
+                                        <p>
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo odit earum
+                                            animi!
+                                            Dolore animi dolorum, beatae nobis pariatur omnis quidem. Minima impedit
+                                            quisquam unde cum nemo ut porro ullam veniam blanditiis quia tenetur
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
